--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
 <style>
   *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-  body {
-    background: #08080f;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    font-family: 'Syne', sans-serif;
-  }
-
+body {
+  background: #08080f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+  margin: 0;
+  font-family: 'Syne', sans-serif;
+}
   .banner {
-    position: relative;
-    width: 100%;
-    max-width: 1445px;
-    height: 1445px;
-    overflow: hidden;
-    background: #06060d;
-    border-radius: 3px;
-  }
+  position: relative;
+  width: 100%;
+  height: 100vh;  /* or 100% if inside a container */
+  max-width: 100%;
+  overflow: hidden;
+  background: #06060d;
+  border-radius: 3px;
+}
 
   canvas {
     position: absolute;
